# p-terminal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INFO.md  LEARN.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  TREE.md  VERSIONS.md
IQ/: README.md
p-kernel/: README.md  launche-p-kernel.py
p-term/: Cargo.toml  README.md  p-term-versions.json  p-term.rs  run-p-term.bat
p-term-lx/: README.md
p-term/commands/: all-pp-commands  gpp.py  neofetch-2.py  neofetch-3.py  neofetch.py  p-copy.py  p-git-com.py  p-git-mavis.py  p-git-python.py  p-git-simon.py  p-qwen.py  p-ubuntu.py  theme-pcc-10.py  theme-pcc-15.py  theme-pcc-18.py  theme-pcc-19.py  update-ollama.py  update.py
p-term/install/crystal/: install-crystal.py
p-term/install/elm/: install-elm.py
p-term/install/java/javac/: install-javac.py
p-term/install/lisp/: install-lisp.py
p-term/install/solidity/: install-solidity.py
p-term/main-test/: main-3.rs  main-4.rs  main.rs
p-term/main-test/p-term/: main-4.rs  main-5.rs  main-6.rs  main.rs
p-term/main-test/p-term-launcher/: doktor.rs  run-p-term.bat
p-term/src/: main.rs  p-term.rs
p-wine/: README.md
pp-term/: INSTALL.md  README.md  THEMES.md  autocompletion_commands.json  current_env.json  p-start-u.ps1  p-start.ps1  pp-term-4-3.py  pp-term-4-install.py  pp-term-4.py  pp-term-5-3.py  pp-term-5-4.py  pp-term-5-install.py  pp-term-5.py  pp-term-6-3.py  pp-term-6-4.py  pp-term-6-doctor-main.py  pp-term-6-install-cirq.py  pp-term-6-install-jax.py  pp-term-6-install-main.py  pp-term-6-install-pytorch.py  (+22 more)
pp-term-lx/: README.md  REAMDE.md
(+391 files in other folders)
