[package]
name = "p-terminal"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
git2 = "0.17"
rustyline = "11.0"
sysinfo = "0.28"
tokio = { version = "1.34", features = ["process", "signal", "rt", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
once_cell = "1.20"
whoami = "1.2"
